fixed load pipes error.